prevent text wrap on side of inline images

--- a/assets/css/theme.css
+++ b/assets/css/theme.css
@@ -76,8 +76,8 @@
 }
 
 p img {
-	margin-left: auto;
-	margin-right: auto;
+	margin-left: 5%;
+	margin-right: 5%;
 	padding: 1em;
 	max-width: 90%
 }
